clusters/talos-pve/flux-system/flux-operator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cilium-ingress-to-flux-operator-web
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: flux-operator
      app.kubernetes.io/name: flux-operator
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9080"
              protocol: TCP
